--- a/notebooks/02_entrenament_models.ipynb
+++ b/notebooks/02_entrenament_models.ipynb
@@ -15,9 +15,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset carregat amb 333 files\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>torgersen</td>\n",
+       "      <td>39.3</td>\n",
+       "      <td>20.6</td>\n",
+       "      <td>190.0</td>\n",
+       "      <td>3650.0</td>\n",
+       "      <td>male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0  Adelie  torgersen            39.1           18.7              181.0   \n",
+       "1  Adelie  torgersen            39.5           17.4              186.0   \n",
+       "2  Adelie  torgersen            40.3           18.0              195.0   \n",
+       "3  Adelie  torgersen            36.7           19.3              193.0   \n",
+       "4  Adelie  torgersen            39.3           20.6              190.0   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0       3750.0    male  \n",
+       "1       3800.0  female  \n",
+       "2       3250.0  female  \n",
+       "3       3450.0  female  \n",
+       "4       3650.0    male  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -46,9 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables categòriques: ['island', 'sex']\n",
+      "Variables numèriques: ['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']\n"
+     ]
+    }
+   ],
    "source": [
     "# Definir variables categòriques i numèriques\n",
     "categorical = ['island', 'sex']\n",
@@ -60,9 +182,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Codificació d'espècies:\n",
+      "0: Adelie\n",
+      "1: Chinstrap\n",
+      "2: Gentoo\n"
+     ]
+    }
+   ],
    "source": [
     "# Codificar la variable objectiu (species)\n",
     "le = LabelEncoder()\n",
@@ -75,9 +209,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dades d'entrenament: 266 (79.9%)\n",
+      "Dades de prova: 67 (20.1%)\n",
+      "\n",
+      "Distribució d'espècies en entrenament:\n",
+      "0    117\n",
+      "1     54\n",
+      "2     95\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Distribució d'espècies en prova:\n",
+      "0    29\n",
+      "1    14\n",
+      "2    24\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Dividir en entrenament (80%) i prova (20%)\n",
     "df_train, df_test = train_test_split(df, test_size=0.2, random_state=42, stratify=df['species_encoded'])\n",
@@ -104,9 +260,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Forma de X_train: (266, 9)\n",
+      "Forma de X_test: (67, 9)\n",
+      "\n",
+      "Característiques generades:\n",
+      "['bill_depth_mm' 'bill_length_mm' 'body_mass_g' 'flipper_length_mm'\n",
+      " 'island=biscoe' 'island=dream' 'island=torgersen' 'sex=female' 'sex=male']\n"
+     ]
+    }
+   ],
    "source": [
     "# Convertir a diccionaris per DictVectorizer\n",
     "train_dict = df_train[categorical + numerical].to_dict(orient='records')\n",
@@ -127,9 +297,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Estadístiques de X_train_scaled:\n",
+      "Mitjana: -0.0000\n",
+      "Desviació estàndard: 1.0000\n"
+     ]
+    }
+   ],
    "source": [
     "# Normalitzar les variables numèriques\n",
     "scaler = StandardScaler()\n",
@@ -152,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,9 +363,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MODEL: Regressió Logística\n",
+      "============================================================\n",
+      "\n",
+      "Accuracy: 0.9851 (98.51%)\n",
+      "\n",
+      "Informe de classificació:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Adelie       1.00      0.97      0.98        29\n",
+      "   Chinstrap       0.93      1.00      0.97        14\n",
+      "      Gentoo       1.00      1.00      1.00        24\n",
+      "\n",
+      "    accuracy                           0.99        67\n",
+      "   macro avg       0.98      0.99      0.98        67\n",
+      "weighted avg       0.99      0.99      0.99        67\n",
+      "\n",
+      "\n",
+      "Matriu de confusió:\n",
+      "[[28  1  0]\n",
+      " [ 0 14  0]\n",
+      " [ 0  0 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrenar Regressió Logística\n",
     "lr_model = LogisticRegression(max_iter=1000, random_state=42)\n",
@@ -203,9 +414,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MODEL: SVM\n",
+      "============================================================\n",
+      "\n",
+      "Accuracy: 0.9851 (98.51%)\n",
+      "\n",
+      "Informe de classificació:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Adelie       1.00      0.97      0.98        29\n",
+      "   Chinstrap       0.93      1.00      0.97        14\n",
+      "      Gentoo       1.00      1.00      1.00        24\n",
+      "\n",
+      "    accuracy                           0.99        67\n",
+      "   macro avg       0.98      0.99      0.98        67\n",
+      "weighted avg       0.99      0.99      0.99        67\n",
+      "\n",
+      "\n",
+      "Matriu de confusió:\n",
+      "[[28  1  0]\n",
+      " [ 0 14  0]\n",
+      " [ 0  0 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrenar SVM\n",
     "svm_model = SVC(kernel='rbf', random_state=42, probability=True)\n",
@@ -224,9 +465,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MODEL: Arbres de Decisió\n",
+      "============================================================\n",
+      "\n",
+      "Accuracy: 0.9254 (92.54%)\n",
+      "\n",
+      "Informe de classificació:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Adelie       0.93      0.90      0.91        29\n",
+      "   Chinstrap       0.82      1.00      0.90        14\n",
+      "      Gentoo       1.00      0.92      0.96        24\n",
+      "\n",
+      "    accuracy                           0.93        67\n",
+      "   macro avg       0.92      0.94      0.92        67\n",
+      "weighted avg       0.93      0.93      0.93        67\n",
+      "\n",
+      "\n",
+      "Matriu de confusió:\n",
+      "[[26  3  0]\n",
+      " [ 0 14  0]\n",
+      " [ 2  0 22]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrenar Arbres de Decisió\n",
     "dt_model = DecisionTreeClassifier(random_state=42, max_depth=5)\n",
@@ -245,9 +516,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "MODEL: KNN\n",
+      "============================================================\n",
+      "\n",
+      "Accuracy: 0.9851 (98.51%)\n",
+      "\n",
+      "Informe de classificació:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "      Adelie       1.00      0.97      0.98        29\n",
+      "   Chinstrap       0.93      1.00      0.97        14\n",
+      "      Gentoo       1.00      1.00      1.00        24\n",
+      "\n",
+      "    accuracy                           0.99        67\n",
+      "   macro avg       0.98      0.99      0.98        67\n",
+      "weighted avg       0.99      0.99      0.99        67\n",
+      "\n",
+      "\n",
+      "Matriu de confusió:\n",
+      "[[28  1  0]\n",
+      " [ 0 14  0]\n",
+      " [ 0  0 24]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Entrenar KNN\n",
     "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
@@ -266,9 +567,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "============================================================\n",
+      "RESUM DE RESULTATS\n",
+      "============================================================\n",
+      "              Model  Accuracy\n",
+      "Regressió Logística  0.985075\n",
+      "                SVM  0.985075\n",
+      "                KNN  0.985075\n",
+      "  Arbres de Decisió  0.925373\n",
+      "\n",
+      "Millor model: Regressió Logística amb 98.51% d'accuracy\n"
+     ]
+    }
+   ],
    "source": [
     "# Comparar resultats\n",
     "results = pd.DataFrame({\n",
@@ -293,9 +612,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model guardat: ../models/logistic_regression_model.pkl\n",
+      "Model guardat: ../models/svm_model.pkl\n",
+      "Model guardat: ../models/decision_tree_model.pkl\n",
+      "Model guardat: ../models/knn_model.pkl\n",
+      "\n",
+      "✓ Tots els models han estat serialitzats correctament!\n"
+     ]
+    }
+   ],
    "source": [
     "# Guardar tots els models\n",
     "models = {\n",
@@ -317,12 +649,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
