--- a/notebooks/01_preparacio_dades.ipynb
+++ b/notebooks/01_preparacio_dades.ipynb
@@ -11,9 +11,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dataset carregat amb 344 files\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2  Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3  Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4  Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0       3750.0    Male  \n",
+       "1       3800.0  Female  \n",
+       "2       3250.0  Female  \n",
+       "3          NaN     NaN  \n",
+       "4       3450.0  Female  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -27,9 +140,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Informació del dataset:\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 344 entries, 0 to 343\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   species            344 non-null    object \n",
+      " 1   island             344 non-null    object \n",
+      " 2   bill_length_mm     342 non-null    float64\n",
+      " 3   bill_depth_mm      342 non-null    float64\n",
+      " 4   flipper_length_mm  342 non-null    float64\n",
+      " 5   body_mass_g        342 non-null    float64\n",
+      " 6   sex                333 non-null    object \n",
+      "dtypes: float64(4), object(3)\n",
+      "memory usage: 18.9+ KB\n",
+      "\n",
+      "Estadístiques:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "      <td>342.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>43.921930</td>\n",
+       "      <td>17.151170</td>\n",
+       "      <td>200.915205</td>\n",
+       "      <td>4201.754386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>5.459584</td>\n",
+       "      <td>1.974793</td>\n",
+       "      <td>14.061714</td>\n",
+       "      <td>801.954536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>32.100000</td>\n",
+       "      <td>13.100000</td>\n",
+       "      <td>172.000000</td>\n",
+       "      <td>2700.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>39.225000</td>\n",
+       "      <td>15.600000</td>\n",
+       "      <td>190.000000</td>\n",
+       "      <td>3550.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44.450000</td>\n",
+       "      <td>17.300000</td>\n",
+       "      <td>197.000000</td>\n",
+       "      <td>4050.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>48.500000</td>\n",
+       "      <td>18.700000</td>\n",
+       "      <td>213.000000</td>\n",
+       "      <td>4750.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>59.600000</td>\n",
+       "      <td>21.500000</td>\n",
+       "      <td>231.000000</td>\n",
+       "      <td>6300.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       bill_length_mm  bill_depth_mm  flipper_length_mm  body_mass_g\n",
+       "count      342.000000     342.000000         342.000000   342.000000\n",
+       "mean        43.921930      17.151170         200.915205  4201.754386\n",
+       "std          5.459584       1.974793          14.061714   801.954536\n",
+       "min         32.100000      13.100000         172.000000  2700.000000\n",
+       "25%         39.225000      15.600000         190.000000  3550.000000\n",
+       "50%         44.450000      17.300000         197.000000  4050.000000\n",
+       "75%         48.500000      18.700000         213.000000  4750.000000\n",
+       "max         59.600000      21.500000         231.000000  6300.000000"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Informació del dataset\n",
     "print(\"\\nInformació del dataset:\")\n",
@@ -40,9 +282,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Valors nuls per columna:\n",
+      "species               0\n",
+      "island                0\n",
+      "bill_length_mm        2\n",
+      "bill_depth_mm         2\n",
+      "flipper_length_mm     2\n",
+      "body_mass_g           2\n",
+      "sex                  11\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Comprovar valors nuls\n",
     "print(\"\\nValors nuls per columna:\")\n",
@@ -54,39 +313,41 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Eliminar files amb valors NA\n",
-    "df_clean = df.dropna()\n",
-    "print(f\"\\nFiles després d'eliminar NA: {len(df_clean)} (eliminades: {len(df) - len(df_clean)})\")\n",
-    "df_clean.head()"
-   ]
+   "source": "# Eliminar files amb valors NA\ndf_clean = df.dropna().copy()\nprint(f\"\\nFiles després d'eliminar NA: {len(df_clean)} (eliminades: {len(df) - len(df_clean)})\")\ndf_clean.head()"
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Convertir noms de columnes a minúscules i substituir espais per guions baixos\n",
-    "replacer = lambda s: s.lower().replace(' ', '_')\n",
-    "df_clean.columns = [replacer(col) for col in df_clean.columns]\n",
-    "\n",
-    "# Convertir valors categòrics a minúscules\n",
-    "categorical_cols = df_clean.select_dtypes(include=['object', 'category']).columns\n",
-    "for col in categorical_cols:\n",
-    "    if col != 'species':  # No convertim la variable objectiu encara\n",
-    "        df_clean[col] = df_clean[col].astype(str).str.lower().str.replace(' ', '_')\n",
-    "\n",
-    "print(\"\\nNoms de columnes normalitzats:\")\n",
-    "print(df_clean.columns.tolist())\n",
-    "df_clean.head()"
-   ]
+   "source": "# Convertir noms de columnes a minúscules i substituir espais per guions baixos\nreplacer = lambda s: s.lower().replace(' ', '_')\ndf_clean.columns = [replacer(col) for col in df_clean.columns]\n\n# Convertir valors categòrics a minúscules\ncategorical_cols = df_clean.select_dtypes(include=['object', 'category']).columns\nfor col in categorical_cols:\n    if col != 'species':  # No convertim la variable objectiu encara\n        df_clean.loc[:, col] = df_clean[col].astype(str).str.lower().str.replace(' ', '_')\n\nprint(\"\\nNoms de columnes normalitzats:\")\nprint(df_clean.columns.tolist())\ndf_clean.head()"
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Distribució d'espècies:\n",
+      "species\n",
+      "Adelie       146\n",
+      "Gentoo       119\n",
+      "Chinstrap     68\n",
+      "Name: count, dtype: int64\n",
+      "\n",
+      "Percentatge per espècie:\n",
+      "species\n",
+      "Adelie       43.843844\n",
+      "Gentoo       35.735736\n",
+      "Chinstrap    20.420420\n",
+      "Name: proportion, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
     "# Analitzar la distribució de les espècies\n",
     "print(\"\\nDistribució d'espècies:\")\n",
@@ -97,9 +358,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dataset net guardat a: ../datasets/penguins_clean.csv\n"
+     ]
+    }
+   ],
    "source": [
     "# Guardar el dataset net\n",
     "df_clean.to_csv('../datasets/penguins_clean.csv', index=False)\n",
@@ -109,12 +379,20 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
