--- a/notebooks/03_client_prediccions.ipynb
+++ b/notebooks/03_client_prediccions.ipynb
@@ -11,9 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✓ Servei actiu!\n",
+      "{\n",
+      "  \"models_loaded\": 4,\n",
+      "  \"status\": \"healthy\"\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
@@ -33,9 +45,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Models disponibles:\n",
+      "{\n",
+      "  \"count\": 4,\n",
+      "  \"models\": [\n",
+      "    \"logistic_regression\",\n",
+      "    \"svm\",\n",
+      "    \"decision_tree\",\n",
+      "    \"knn\"\n",
+      "  ]\n",
+      "}\n"
+     ]
+    }
+   ],
    "source": [
     "# Llistar models disponibles\n",
     "response = requests.get(f\"{BASE_URL}/models\")\n",
@@ -53,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,8 +170,8 @@
     "                print(f\"  - {key}: {value}\")\n",
     "            \n",
     "            pred = result['prediction']\n",
-    "            print(f\"\\n🔮 PREDICCIÓ: {pred['species'].upper()}\")\n",
-    "            print(f\"📊 Confiança: {pred['confidence']*100:.2f}%\")\n",
+    "            print(f\"\\nPREDICCIÓ: {pred['species'].upper()}\")\n",
+    "            print(f\"Confiança: {pred['confidence']*100:.2f}%\")\n",
     "            \n",
     "            print(f\"\\nProbabilitats per espècie:\")\n",
     "            for species, prob in sorted(pred['probabilities'].items(), key=lambda x: x[1], reverse=True):\n",
@@ -176,9 +205,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 1 (esperat: Adelie)\n",
+      "MODEL: LOGISTIC_REGRESSION\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: torgersen\n",
+      "  - bill_length_mm: 39.1\n",
+      "  - bill_depth_mm: 18.7\n",
+      "  - flipper_length_mm: 181.0\n",
+      "  - body_mass_g: 3750.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 99.99%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      :  99.99% ███████████████████████████████████████\n",
+      "  Chinstrap   :   0.01% \n",
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 2 (esperat: Gentoo)\n",
+      "MODEL: LOGISTIC_REGRESSION\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 50.0\n",
+      "  - bill_depth_mm: 16.3\n",
+      "  - flipper_length_mm: 230.0\n",
+      "  - body_mass_g: 5700.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: GENTOO\n",
+      "Confiança: 99.89%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Gentoo      :  99.89% ███████████████████████████████████████\n",
+      "  Chinstrap   :   0.07% \n",
+      "  Adelie      :   0.04% \n"
+     ]
+    }
+   ],
    "source": [
     "# Dues prediccions amb Regressió Logística\n",
     "for desc, penguin in penguins_test[:2]:\n",
@@ -194,9 +272,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 2 (esperat: Gentoo)\n",
+      "MODEL: SVM\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 50.0\n",
+      "  - bill_depth_mm: 16.3\n",
+      "  - flipper_length_mm: 230.0\n",
+      "  - body_mass_g: 5700.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: GENTOO\n",
+      "Confiança: 98.76%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Gentoo      :  98.76% ███████████████████████████████████████\n",
+      "  Adelie      :   0.72% \n",
+      "  Chinstrap   :   0.51% \n",
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 3 (esperat: Chinstrap)\n",
+      "MODEL: SVM\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: dream\n",
+      "  - bill_length_mm: 46.5\n",
+      "  - bill_depth_mm: 17.9\n",
+      "  - flipper_length_mm: 192.0\n",
+      "  - body_mass_g: 3500.0\n",
+      "  - sex: female\n",
+      "\n",
+      "PREDICCIÓ: CHINSTRAP\n",
+      "Confiança: 99.08%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Chinstrap   :  99.08% ███████████████████████████████████████\n",
+      "  Gentoo      :   0.55% \n",
+      "  Adelie      :   0.37% \n"
+     ]
+    }
+   ],
    "source": [
     "# Dues prediccions amb SVM\n",
     "for desc, penguin in penguins_test[1:3]:\n",
@@ -212,9 +339,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 1 (esperat: Adelie)\n",
+      "MODEL: DECISION_TREE\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: torgersen\n",
+      "  - bill_length_mm: 39.1\n",
+      "  - bill_depth_mm: 18.7\n",
+      "  - flipper_length_mm: 181.0\n",
+      "  - body_mass_g: 3750.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      : 100.00% ████████████████████████████████████████\n",
+      "  Chinstrap   :   0.00% \n",
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 4 (cas intermedi)\n",
+      "MODEL: DECISION_TREE\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      : 100.00% ████████████████████████████████████████\n",
+      "  Chinstrap   :   0.00% \n",
+      "  Gentoo      :   0.00% \n"
+     ]
+    }
+   ],
    "source": [
     "# Dues prediccions amb Arbres de Decisió\n",
     "for desc, penguin in [penguins_test[0], penguins_test[3]]:\n",
@@ -230,9 +406,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 3 (esperat: Chinstrap)\n",
+      "MODEL: KNN\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: dream\n",
+      "  - bill_length_mm: 46.5\n",
+      "  - bill_depth_mm: 17.9\n",
+      "  - flipper_length_mm: 192.0\n",
+      "  - body_mass_g: 3500.0\n",
+      "  - sex: female\n",
+      "\n",
+      "PREDICCIÓ: CHINSTRAP\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Chinstrap   : 100.00% ████████████████████████████████████████\n",
+      "  Adelie      :   0.00% \n",
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 4 (cas intermedi)\n",
+      "MODEL: KNN\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      : 100.00% ████████████████████████████████████████\n",
+      "  Chinstrap   :   0.00% \n",
+      "  Gentoo      :   0.00% \n"
+     ]
+    }
+   ],
    "source": [
     "# Dues prediccions amb KNN\n",
     "for desc, penguin in [penguins_test[2], penguins_test[3]]:\n",
@@ -248,9 +473,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "######################################################################\n",
+      "# COMPARACIÓ DE TOTS ELS MODELS AMB EL MATEIX PINGÜÍ\n",
+      "######################################################################\n",
+      "\n",
+      "======================================================================\n",
+      "MODEL: LOGISTIC_REGRESSION\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 68.39%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      :  68.39% ███████████████████████████\n",
+      "  Gentoo      :  29.79% ███████████\n",
+      "  Chinstrap   :   1.82% \n",
+      "\n",
+      "======================================================================\n",
+      "MODEL: SVM\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 85.65%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      :  85.65% ██████████████████████████████████\n",
+      "  Gentoo      :  11.56% ████\n",
+      "  Chinstrap   :   2.79% █\n",
+      "\n",
+      "======================================================================\n",
+      "MODEL: DECISION_TREE\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      : 100.00% ████████████████████████████████████████\n",
+      "  Chinstrap   :   0.00% \n",
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "MODEL: KNN\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Adelie      : 100.00% ████████████████████████████████████████\n",
+      "  Chinstrap   :   0.00% \n",
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "RESUM DE PREDICCIONS\n",
+      "======================================================================\n",
+      "              Model Predicció Confiança\n",
+      "logistic_regression    Adelie    68.39%\n",
+      "                svm    Adelie    85.65%\n",
+      "      decision_tree    Adelie   100.00%\n",
+      "                knn    Adelie   100.00%\n"
+     ]
+    }
+   ],
    "source": [
     "# Provar tots els models amb el mateix pingüí\n",
     "test_penguin = penguin_4\n",
@@ -276,16 +601,31 @@
     "df_comparison = pd.DataFrame(results_comparison)\n",
     "print(df_comparison.to_string(index=False))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.3"
   }
  },
