--- a/notebooks/03_client_prediccions.ipynb
+++ b/notebooks/03_client_prediccions.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -235,31 +235,31 @@
       "  Gentoo      :   0.00% \n",
       "\n",
       "======================================================================\n",
-      "TEST: Pingüí 2 (esperat: Gentoo)\n",
+      "TEST: Pingüí 4 (cas intermedi)\n",
       "MODEL: LOGISTIC_REGRESSION\n",
       "======================================================================\n",
       "\n",
       "Dades d'entrada:\n",
       "  - island: biscoe\n",
-      "  - bill_length_mm: 50.0\n",
-      "  - bill_depth_mm: 16.3\n",
-      "  - flipper_length_mm: 230.0\n",
-      "  - body_mass_g: 5700.0\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
       "  - sex: male\n",
       "\n",
-      "PREDICCIÓ: GENTOO\n",
-      "Confiança: 99.89%\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 68.39%\n",
       "\n",
       "Probabilitats per espècie:\n",
-      "  Gentoo      :  99.89% ███████████████████████████████████████\n",
-      "  Chinstrap   :   0.07% \n",
-      "  Adelie      :   0.04% \n"
+      "  Adelie      :  68.39% ███████████████████████████\n",
+      "  Gentoo      :  29.79% ███████████\n",
+      "  Chinstrap   :   1.82% \n"
      ]
     }
    ],
    "source": [
     "# Dues prediccions amb Regressió Logística\n",
-    "for desc, penguin in penguins_test[:2]:\n",
+    "for desc, penguin in [penguins_test[0], penguins_test[3]]:\n",
     "    predict_penguin('logistic_regression', penguin, desc)"
    ]
   },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -302,31 +302,31 @@
       "  Chinstrap   :   0.51% \n",
       "\n",
       "======================================================================\n",
-      "TEST: Pingüí 3 (esperat: Chinstrap)\n",
+      "TEST: Pingüí 4 (cas intermedi)\n",
       "MODEL: SVM\n",
       "======================================================================\n",
       "\n",
       "Dades d'entrada:\n",
-      "  - island: dream\n",
-      "  - bill_length_mm: 46.5\n",
-      "  - bill_depth_mm: 17.9\n",
-      "  - flipper_length_mm: 192.0\n",
-      "  - body_mass_g: 3500.0\n",
-      "  - sex: female\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 45.2\n",
+      "  - bill_depth_mm: 16.6\n",
+      "  - flipper_length_mm: 191.0\n",
+      "  - body_mass_g: 4250.0\n",
+      "  - sex: male\n",
       "\n",
-      "PREDICCIÓ: CHINSTRAP\n",
-      "Confiança: 99.08%\n",
+      "PREDICCIÓ: ADELIE\n",
+      "Confiança: 85.65%\n",
       "\n",
       "Probabilitats per espècie:\n",
-      "  Chinstrap   :  99.08% ███████████████████████████████████████\n",
-      "  Gentoo      :   0.55% \n",
-      "  Adelie      :   0.37% \n"
+      "  Adelie      :  85.65% ██████████████████████████████████\n",
+      "  Gentoo      :  11.56% ████\n",
+      "  Chinstrap   :   2.79% █\n"
      ]
     }
    ],
    "source": [
     "# Dues prediccions amb SVM\n",
-    "for desc, penguin in penguins_test[1:3]:\n",
+    "for desc, penguin in [penguins_test[1], penguins_test[3]]:\n",
     "    predict_penguin('svm', penguin, desc)"
    ]
   },
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -348,24 +348,24 @@
      "text": [
       "\n",
       "======================================================================\n",
-      "TEST: Pingüí 1 (esperat: Adelie)\n",
+      "TEST: Pingüí 3 (esperat: Chinstrap)\n",
       "MODEL: DECISION_TREE\n",
       "======================================================================\n",
       "\n",
       "Dades d'entrada:\n",
-      "  - island: torgersen\n",
-      "  - bill_length_mm: 39.1\n",
-      "  - bill_depth_mm: 18.7\n",
-      "  - flipper_length_mm: 181.0\n",
-      "  - body_mass_g: 3750.0\n",
-      "  - sex: male\n",
+      "  - island: dream\n",
+      "  - bill_length_mm: 46.5\n",
+      "  - bill_depth_mm: 17.9\n",
+      "  - flipper_length_mm: 192.0\n",
+      "  - body_mass_g: 3500.0\n",
+      "  - sex: female\n",
       "\n",
-      "PREDICCIÓ: ADELIE\n",
+      "PREDICCIÓ: CHINSTRAP\n",
       "Confiança: 100.00%\n",
       "\n",
       "Probabilitats per espècie:\n",
-      "  Adelie      : 100.00% ████████████████████████████████████████\n",
-      "  Chinstrap   :   0.00% \n",
+      "  Chinstrap   : 100.00% ████████████████████████████████████████\n",
+      "  Adelie      :   0.00% \n",
       "  Gentoo      :   0.00% \n",
       "\n",
       "======================================================================\n",
@@ -393,7 +393,7 @@
    ],
    "source": [
     "# Dues prediccions amb Arbres de Decisió\n",
-    "for desc, penguin in [penguins_test[0], penguins_test[3]]:\n",
+    "for desc, penguin in [penguins_test[2], penguins_test[3]]:\n",
     "    predict_penguin('decision_tree', penguin, desc)"
    ]
   },
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -415,37 +415,16 @@
      "text": [
       "\n",
       "======================================================================\n",
-      "TEST: Pingüí 3 (esperat: Chinstrap)\n",
+      "TEST: Pingüí 1 (esperat: Adelie)\n",
       "MODEL: KNN\n",
       "======================================================================\n",
       "\n",
       "Dades d'entrada:\n",
-      "  - island: dream\n",
-      "  - bill_length_mm: 46.5\n",
-      "  - bill_depth_mm: 17.9\n",
-      "  - flipper_length_mm: 192.0\n",
-      "  - body_mass_g: 3500.0\n",
-      "  - sex: female\n",
-      "\n",
-      "PREDICCIÓ: CHINSTRAP\n",
-      "Confiança: 100.00%\n",
-      "\n",
-      "Probabilitats per espècie:\n",
-      "  Chinstrap   : 100.00% ████████████████████████████████████████\n",
-      "  Adelie      :   0.00% \n",
-      "  Gentoo      :   0.00% \n",
-      "\n",
-      "======================================================================\n",
-      "TEST: Pingüí 4 (cas intermedi)\n",
-      "MODEL: KNN\n",
-      "======================================================================\n",
-      "\n",
-      "Dades d'entrada:\n",
-      "  - island: biscoe\n",
-      "  - bill_length_mm: 45.2\n",
-      "  - bill_depth_mm: 16.6\n",
-      "  - flipper_length_mm: 191.0\n",
-      "  - body_mass_g: 4250.0\n",
+      "  - island: torgersen\n",
+      "  - bill_length_mm: 39.1\n",
+      "  - bill_depth_mm: 18.7\n",
+      "  - flipper_length_mm: 181.0\n",
+      "  - body_mass_g: 3750.0\n",
       "  - sex: male\n",
       "\n",
       "PREDICCIÓ: ADELIE\n",
@@ -454,13 +433,34 @@
       "Probabilitats per espècie:\n",
       "  Adelie      : 100.00% ████████████████████████████████████████\n",
       "  Chinstrap   :   0.00% \n",
-      "  Gentoo      :   0.00% \n"
+      "  Gentoo      :   0.00% \n",
+      "\n",
+      "======================================================================\n",
+      "TEST: Pingüí 2 (esperat: Gentoo)\n",
+      "MODEL: KNN\n",
+      "======================================================================\n",
+      "\n",
+      "Dades d'entrada:\n",
+      "  - island: biscoe\n",
+      "  - bill_length_mm: 50.0\n",
+      "  - bill_depth_mm: 16.3\n",
+      "  - flipper_length_mm: 230.0\n",
+      "  - body_mass_g: 5700.0\n",
+      "  - sex: male\n",
+      "\n",
+      "PREDICCIÓ: GENTOO\n",
+      "Confiança: 100.00%\n",
+      "\n",
+      "Probabilitats per espècie:\n",
+      "  Gentoo      : 100.00% ████████████████████████████████████████\n",
+      "  Adelie      :   0.00% \n",
+      "  Chinstrap   :   0.00% \n"
      ]
     }
    ],
    "source": [
     "# Dues prediccions amb KNN\n",
-    "for desc, penguin in [penguins_test[2], penguins_test[3]]:\n",
+    "for desc, penguin in [penguins_test[0], penguins_test[1]]:\n",
     "    predict_penguin('knn', penguin, desc)"
    ]
   },
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
